--- a/admin.html
+++ b/admin.html
@@ -1,36 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<title>Painel Administrativo</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Painel Administrativo</title>
 </head>
 <body>
-<header>
-<img src="assets/logo-faculdade.png" class="logo">
-<h1>Painel Administrativo</h1>
-</header>
 
+  <h1>Painel da Ouvidoria – MoveEdu</h1>
+  <p>Área restrita</p>
 
-<main class="card">
-<input id="email" placeholder="Email">
-<input id="senha" type="password" placeholder="Senha">
-<button onclick="login()">Entrar</button>
-
-
-<hr>
-
-
-<input id="filtro" placeholder="Pesquisar">
-<button onclick="exportar()">Baixar XLSX</button>
-
-
-<div id="lista"></div>
-</main>
-
-
-<script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
-<script src="firebase.js"></script>
-<script src="admin.js"></script>
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
