Correção de redirecionamento e controle de sessão

--- a/admin.html
+++ b/admin.html
@@ -5,6 +5,7 @@
   <title>Painel Administrativo</title>
 </head>
 <body>
+    <button id="logout">Sair</button>
 
   <h1>Painel da Ouvidoria – MoveEdu</h1>
   <p>Área restrita</p>
