--- a/admin.html
+++ b/admin.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <title>Painel Administrativo</title>
-</head>
-<body>
-    <button id="logout">Sair</button>
+<h1>Painel Administrativo</h1>
+<button id="logout">Sair</button>
 
-  <h1>Painel da Ouvidoria – MoveEdu</h1>
-  <p>Área restrita</p>
-
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="script.js"></script>
-</body>
-</html>
+<script type="module" src="firebase.js"></script>
+<script type="module" src="script.js"></script>
