--- a/login.html
+++ b/login.html
@@ -2,17 +2,19 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Login - Ouvidoria MOVEEDU</title>
+  <title>Login Admin</title>
 </head>
 <body>
 
-<h2>Login Administrativo</h2>
+  <h2>Login Administrativo</h2>
 
-<input type="email" id="email" placeholder="Email"><br><br>
-<input type="password" id="senha" placeholder="Senha"><br><br>
+  <form id="loginForm">
+    <input type="email" id="email" placeholder="Email" required><br><br>
+    <input type="password" id="senha" placeholder="Senha" required><br><br>
+    <button type="submit">Entrar</button>
+  </form>
 
-<button onclick="login()">Entrar</button>
-
-<script type="module" src="auth.js"></script>
+  <script type="module" src="firebase.js"></script>
+  <script type="module" src="script.js"></script>
 </body>
 </html>
