--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>Ouvidoria MoveEdu</title>
+  <meta http-equiv="refresh" content="0; url=formulario.html">
 </head>
-<body>
-
-  <h1>Ouvidoria MoveEdu</h1>
-  <p>Envie sua manifestação</p>
-
-  <form>
-    <input type="text" placeholder="Seu nome (opcional)"><br><br>
-    <textarea placeholder="Digite sua mensagem" required></textarea><br><br>
-    <button type="submit">Enviar</button>
-  </form>
-
-  <br>
-  <a href="login.html">Acesso administrativo</a>
-
-</body>
+<body></body>
 </html>
