Correção caminho CSS

--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,6 @@
 <h1>Painel Administrativo</h1>
 <button id="logout">Sair</button>
+<link rel="stylesheet" href="./style.css">
 
 <script type="module" src="firebase.js"></script>
 <script type="module" src="script.js"></script>
