--- a/login.html
+++ b/login.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Login Admin</title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
-  <h2>Login Administrativo</h2>
+<header>
+  <h1>Acesso Administrativo</h1>
+</header>
 
+<div class="card">
   <form id="loginForm">
-    <input type="email" id="email" placeholder="Email" required><br><br>
-    <input type="password" id="senha" placeholder="Senha" required><br><br>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="senha" placeholder="Senha" required>
     <button type="submit">Entrar</button>
   </form>
+</div>
 
-  <script type="module" src="firebase.js"></script>
-  <script type="module" src="script.js"></script>
+<script type="module" src="./firebase.js"></script>
+<script type="module" src="./admin.js"></script>
 </body>
 </html>
