--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
 
   <form id="formOuvidoria">
     <input type="text" id="nome" placeholder="Seu nome (opcional)">
-
     <input type="tel" id="telefone" placeholder="Telefone / WhatsApp (opcional)">
+
+    <textarea id="gosta" placeholder="O que você mais gosta na escola? (opcional)"></textarea>
 
     <textarea id="mensagem" placeholder="Digite sua mensagem" required></textarea>
 
@@ -25,7 +26,6 @@
   </form>
 
   <p id="status"></p>
-
   <a href="login.html">Acesso administrativo</a>
 </div>
 
@@ -36,6 +36,5 @@
 
 <script type="module" src="firebase.js"></script>
 <script type="module" src="form.js"></script>
-
 </body>
 </html>
