Ouvidoria completa: CSS, Firebase e Admin funcionando

--- a/admin.html
+++ b/admin.html
@@ -15,7 +15,7 @@
 </header>
 
 <div class="card">
-  <button onclick="exportarXLSX()">Exportar XLSX</button>
+  <button id="btnExportar">Exportar XLSX</button>
   <div id="lista"></div>
 </div>
 
