--- a/admin.html
+++ b/admin.html
@@ -2,10 +2,8 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Painel Administrativo</title>
+  <title>Painel Admin</title>
   <link rel="stylesheet" href="style.css">
-
-  <!-- Biblioteca XLSX -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 </head>
 <body>
@@ -19,7 +17,6 @@
   <div id="lista"></div>
 </div>
 
-<script type="module" src="firebase.js"></script>
 <script type="module" src="admin.js"></script>
 </body>
 </html>
