Corrige botão exportar XLSX

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="card">
   <h2>Ouvidoria MOVEEDU</h2>
 
-  <form id="formOuvidoria">
+  <form id="formOuvidoria" action="javascript:void(0);">
     <input type="text" id="nome" placeholder="Seu nome (opcional)">
     <input type="tel" id="telefone" placeholder="Telefone / WhatsApp (opcional)">
 
