Ouvidoria completa: CSS, Firebase e Admin funcionando

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <label>O que você mais gosta na escola?</label>
   <textarea id="gosta" rows="3" placeholder="Conte para nós"></textarea>
 
-  <button id="btnEnviar">Enviar</button>
+  <button type="button" id="btnEnviar">Enviar</button>
 
   <a href="login.html" class="admin-link">Acesso administrativo</a>
 </div>
