--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,9 @@
 </header>
 
 <div class="card">
-  <button id="btnExportar">Exportar XLSX</button>
+  <button onclick="exportar()">Baixar XLSX</button>
+  <button onclick="limparTudo()">Limpar Registros</button>
+  <button onclick="logout()">Sair</button>
   <div id="lista"></div>
 </div>
 
