Corrige botões do painel admin

--- a/admin.html
+++ b/admin.html
@@ -13,9 +13,9 @@
 </header>
 
 <div class="card">
-  <button onclick="exportar()">Baixar XLSX</button>
-  <button onclick="limparTudo()">Limpar Registros</button>
-  <button onclick="logout()">Sair</button>
+  <button id="btnExportar">Baixar XLSX</button>
+  <button id="btnLimpar">Limpar Registros</button>
+  <button id="btnSair">Sair</button>
   <div id="lista"></div>
 </div>
 
