Corrige estrutura do admin (JS fora do HTML)

--- a/admin.html
+++ b/admin.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <title>Painel Admin</title>
   <link rel="stylesheet" href="style.css">
+
+  <!-- Biblioteca XLSX -->
   <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 </head>
+
 <body>
 
 <header>
@@ -19,6 +22,7 @@
   <div id="lista"></div>
 </div>
 
+<!-- JS SEMPRE NO FINAL -->
 <script type="module" src="admin.js"></script>
 </body>
 </html>
